# CewAI

helper/: README.md  pyproject.toml  report.md
helper/src/helper/: crew.py  main.py
knowledge1/: README.md  pyproject.toml
knowledge1/src/knowledge1/: crew.py  main.py
knowledge_agent/: README.md  pyproject.toml
knowledge_agent/src/knowledge_agent/: main.py
memory_implement/: README.md  pyproject.toml
memory_implement/my_crew1/: long_term_memory_storage.db
memory_implement/my_crew1/short_term1/: chroma.sqlite3
memory_implement/src/memory_implement/: crew.py
