[project]
name = "helper"
version = "0.1.0"
description = "Helper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
helper = "helper.main:run"
run_crew = "helper.main:run"
train = "helper.main:train"
replay = "helper.main:replay"
test = "helper.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
