[project]
name = "knowledge1"
version = "0.1.0"
description = "knowledge1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
knowledge1 = "knowledge1.main:run"
run_crew = "knowledge1.main:run"
train = "knowledge1.main:train"
replay = "knowledge1.main:replay"
run_crew = "knowledge1.main:deploy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
